--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "mindmate",
   "version": "0.1.0",
@@ -39,12 +38,13 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "js-cookie": "^3.0.5",
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
+    "framer-motion": "^12.23.6",
     "genkit": "^1.13.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "node-html-parser": "^6.1.13",
@@ -56,8 +56,8 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2",
-    "wav": "^1.0.2"
+    "wav": "^1.0.2",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
