--- a/env.example
+++ b/env.example
@@ -23,5 +23,9 @@ OUTLOOK_REDIRECT_URI=http://localhost:3000/api/calendar/outlook
 # Development Settings
 NEXT_PUBLIC_USE_FIREBASE_EMULATOR=false
 
+# Push Notification Configuration (VAPID Keys)
+NEXT_PUBLIC_VAPID_PUBLIC_KEY=your_vapid_public_key_here
+VAPID_PRIVATE_KEY=your_vapid_private_key_here
+
 # Optional: Analytics
 NEXT_PUBLIC_GA_MEASUREMENT_ID=your_ga_measurement_id 
