--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,13 @@
 {
   "functions": {
-    "api/**/*.ts": {
+    "src/app/api/**/route.ts": {
       "maxDuration": 60
     }
-  }
+  },
+  "crons": [
+    {
+      "path": "/api/notifications/trigger-overdue-check",
+      "schedule": "0 */2 * * *"
+    }
+  ]
 }
