--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
   "crons": [
     {
       "path": "/api/notifications/trigger-overdue-check",
-      "schedule": "0 */2 * * *"
+      "schedule": "0 0 * * *"
     }
   ]
 }
