--- a/public/manifest.json
+++ b/public/manifest.json
@@ -42,7 +42,7 @@
       "url": "/?action=new-task",
       "icons": [
         {
-          "src": "/icon-192.png",
+          "src": "/logo.png",
           "sizes": "192x192"
         }
       ]
@@ -54,7 +54,7 @@
       "url": "/analytics",
       "icons": [
         {
-          "src": "/icon-192.png",
+          "src": "/logo.png",
           "sizes": "192x192"
         }
       ]
@@ -66,7 +66,7 @@
       "url": "/pending",
       "icons": [
         {
-          "src": "/icon-192.png",
+          "src": "/logo.png",
           "sizes": "192x192"
         }
       ]
