--- a/env.example
+++ b/env.example
@@ -27,5 +27,19 @@ NEXT_PUBLIC_USE_FIREBASE_EMULATOR=false
 NEXT_PUBLIC_VAPID_PUBLIC_KEY=your_vapid_public_key_here
 VAPID_PRIVATE_KEY=your_vapid_private_key_here
 
+# SMTP Email Configuration
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=your_email@gmail.com
+SMTP_PASS=your_app_password
+SMTP_FROM_NAME=MindMate
+SMTP_FROM_EMAIL=noreply@mindmate.app
+
+# Email Templates Configuration
+EMAIL_SUPPORT_EMAIL=support@mindmate.app
+EMAIL_COMPANY_NAME=MindMate
+EMAIL_COMPANY_URL=https://mindmate.app
+
 # Optional: Analytics
 NEXT_PUBLIC_GA_MEASUREMENT_ID=your_ga_measurement_id 
