--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@types/nodemailer": "^7.0.1",
     "@types/web-push": "^3.6.4",
     "@vercel/node": "^3.2.29",
     "class-variance-authority": "^0.7.1",
@@ -54,6 +55,7 @@
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "node-html-parser": "^6.1.13",
+    "nodemailer": "^7.0.5",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
