--- a/env.example
+++ b/env.example
@@ -10,15 +10,13 @@ NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=your_measurement_id
 # Google AI Configuration
 GOOGLE_AI_API_KEY=your_google_ai_api_key_here
 
-# External Calendar Integration - Google Calendar
+# Google Tasks Integration (OAuth)
 GOOGLE_CLIENT_ID=your_google_oauth_client_id
 GOOGLE_CLIENT_SECRET=your_google_oauth_client_secret
-GOOGLE_REDIRECT_URI=http://localhost:3000/api/calendar/google
+GOOGLE_OAUTH_REDIRECT=http://localhost:3000/api/google/callback
 
-# External Calendar Integration - Microsoft Outlook
-OUTLOOK_CLIENT_ID=your_outlook_app_client_id
-OUTLOOK_CLIENT_SECRET=your_outlook_app_client_secret
-OUTLOOK_REDIRECT_URI=http://localhost:3000/api/calendar/outlook
+# NextAuth URL (for OAuth redirects)
+NEXTAUTH_URL=http://localhost:3000
 
 # Development Settings
 NEXT_PUBLIC_USE_FIREBASE_EMULATOR=false
