--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "firebase-admin": "^12.7.0",
     "framer-motion": "^12.23.12",
     "genkit": "^1.13.0",
+    "googleapis": "^159.0.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
