--- a/package.json
+++ b/package.json
@@ -54,9 +54,10 @@
     "googleapis": "^159.0.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.475.0",
-    "next": "15.3.3",
+    "next": "15.3.4",
     "node-html-parser": "^6.1.13",
     "nodemailer": "^7.0.5",
+    "@opentelemetry/exporter-jaeger": "^1.25.1",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
